--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -50,7 +50,7 @@ body {
 .sidebar .gif-container {
   display: flex;
   flex-direction: row !important;
-  justify-content: space-between;
+  justify-content: space-between !important;
 }
 .sidebar .star-container {
   right: auto;
@@ -59,6 +59,7 @@ body {
 .sidebar img {
   align-self: flex-start;
   max-width: 200px;
+  flex:1;
 }
 .sidebar span {
   font-size: 20px;
@@ -80,4 +81,10 @@ body {
 .sidebar-gifs-wrapper {
   overflow-y: auto;
   max-height: 100%;
+}
+
+@media (max-width: 995px) {
+  .sidebar .gif-container {
+    flex-direction: column !important;
+  }
 }
